; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_python3.c_BufferGetattro.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_python3.c_BufferGetattro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @BufferGetattro to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @BufferGetattro(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* @name, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @GET_ATTR_STRING(i32 %7, i32* %8)
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @name, align 4
  %12 = call i32* @BufferAttrValid(i32* %10, i32 %11)
  store i32* %12, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  store i32* %15, i32** %3, align 8
  br label %36

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @CheckBuffer(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32* null, i32** %3, align 8
  br label %36

21:                                               ; preds = %16
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* @name, align 4
  %24 = call i32* @BufferAttr(i32* %22, i32 %23)
  store i32* %24, i32** %6, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %30, label %27

27:                                               ; preds = %21
  %28 = call i64 (...) @PyErr_Occurred()
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %27, %21
  %31 = load i32*, i32** %6, align 8
  store i32* %31, i32** %3, align 8
  br label %36

32:                                               ; preds = %27
  %33 = load i32*, i32** %4, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = call i32* @PyObject_GenericGetAttr(i32* %33, i32* %34)
  store i32* %35, i32** %3, align 8
  br label %36

36:                                               ; preds = %32, %30, %20, %14
  %37 = load i32*, i32** %3, align 8
  ret i32* %37
}

declare dso_local i32 @GET_ATTR_STRING(i32, i32*) #1

declare dso_local i32* @BufferAttrValid(i32*, i32) #1

declare dso_local i64 @CheckBuffer(i32*) #1

declare dso_local i32* @BufferAttr(i32*, i32) #1

declare dso_local i64 @PyErr_Occurred(...) #1

declare dso_local i32* @PyObject_GenericGetAttr(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
